Add inicial CSS

--- a/.github/style.css
+++ b/.github/style.css
@@ -1,1 +1,74 @@
-
+/*-------- GLOBAL STYLES ---------*/
+* {
+    box-sizing: border-box;
+  }
+  
+  html {
+    font-size: 62.5%;
+  }
+  
+  body {
+    font-size: 1.4rem;
+    margin: 0;
+    font-family: "Ubuntu", serif;
+    font-weight: 400;
+    color: hsl(205, 13%, 67%);
+    line-height: 1.5;
+  }
+  
+  /*-------- TYPOGRAPHY ---------*/
+  
+  h1 {
+    font-size: 3.8rem;
+    color: black;
+    line-height: 1.3;
+    font-weight: 700;
+    margin-top: 0;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  
+  a {
+    color: white;
+    display: block;
+    margin: 16px 0;
+    padding: 12px 48px;
+  }
+  
+  a.toggle {
+    margin: 0;
+  }
+  
+  a.button {
+    color: white;
+    text-transform: uppercase;
+    background-color: black;
+    border-radius: 4px;
+    display: inline-block;
+    text-decoration: none;
+    font-size: 1.2rem;
+    margin: 26px 0;
+  }
+  
+  .login-button {
+    color: white;
+    text-transform: uppercase;
+    background-color: hsl(218, 15%, 31%);
+    border-radius: 4px;
+    text-decoration: none;
+    font-size: 1.2rem;
+    margin: 26px 0;
+  }
+  
+  /*-------- UTILITY ---------*/
+  
+  .content-width {
+    width: 334px;
+    margin: auto;
+  }
+  
+  .dark-background {
+    background-color: hsl(204, 24%, 96%);
+  }
+  
+  
