--- a/.github/style.css
+++ b/.github/style.css
@@ -1,74 +1,281 @@
 /*-------- GLOBAL STYLES ---------*/
 * {
-    box-sizing: border-box;
-  }
-  
-  html {
-    font-size: 62.5%;
-  }
-  
-  body {
-    font-size: 1.4rem;
-    margin: 0;
-    font-family: "Ubuntu", serif;
-    font-weight: 400;
-    color: hsl(205, 13%, 67%);
-    line-height: 1.5;
-  }
-  
-  /*-------- TYPOGRAPHY ---------*/
-  
-  h1 {
-    font-size: 3.8rem;
-    color: black;
-    line-height: 1.3;
-    font-weight: 700;
-    margin-top: 0;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-  
-  a {
-    color: white;
-    display: block;
-    margin: 16px 0;
-    padding: 12px 48px;
-  }
-  
-  a.toggle {
-    margin: 0;
-  }
-  
-  a.button {
-    color: white;
-    text-transform: uppercase;
-    background-color: black;
-    border-radius: 4px;
-    display: inline-block;
-    text-decoration: none;
-    font-size: 1.2rem;
-    margin: 26px 0;
-  }
-  
-  .login-button {
-    color: white;
-    text-transform: uppercase;
-    background-color: hsl(218, 15%, 31%);
-    border-radius: 4px;
-    text-decoration: none;
-    font-size: 1.2rem;
-    margin: 26px 0;
-  }
-  
-  /*-------- UTILITY ---------*/
-  
-  .content-width {
-    width: 334px;
-    margin: auto;
-  }
-  
-  .dark-background {
-    background-color: hsl(204, 24%, 96%);
-  }
-  
-  
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.4rem;
+  margin: 0;
+  font-family: "Ubuntu", serif;
+  font-weight: 400;
+  color: hsl(205, 13%, 67%);
+  line-height: 1.5;
+}
+
+/*-------- TYPOGRAPHY ---------*/
+
+h1 {
+  font-size: 3.8rem;
+  color: black;
+  line-height: 1.3;
+  font-weight: 700;
+  margin-top: 0;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+a {
+  color: white;
+  display: block;
+  margin: 16px 0;
+  padding: 12px 48px;
+}
+
+a.toggle {
+  margin: 0;
+}
+
+a.button {
+  color: white;
+  text-transform: uppercase;
+  background-color: black;
+  border-radius: 4px;
+  display: inline-block;
+  text-decoration: none;
+  font-size: 1.2rem;
+  margin: 26px 0;
+}
+
+.login-button {
+  color: white;
+  text-transform: uppercase;
+  background-color: hsl(218, 15%, 31%);
+  border-radius: 4px;
+  text-decoration: none;
+  font-size: 1.2rem;
+  margin: 26px 0;
+}
+
+/*-------- UTILITY ---------*/
+
+.content-width {
+  width: 334px;
+  margin: auto;
+}
+
+.dark-background {
+  background-color: hsl(204, 24%, 96%);
+}
+
+/*-------- HEADER ---------*/
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 6px 20px;
+  background-color: hsl(0deg 0% 0%);
+}
+
+header img {
+  width: 300px;
+  border-radius: 5px;
+}
+
+.login-button {
+  display: none;
+}
+
+header nav ul {
+  display: none;
+  background-color: hsl(218, 15%, 31%);
+  position: absolute;
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: none;
+}
+
+nav ul li {
+  padding: 8px 0;
+}
+
+nav ul li a {
+  color: white;
+}
+
+.login-button-mobile a {
+  background-color: hsl(0, 0%, 100%);
+  color: hsl(218, 15%, 31%);
+  margin: 0 auto;
+  border-radius: 4px;
+  text-decoration: none;
+  font-size: 1.2rem;
+  display: inline-block;
+}
+
+.show-items {
+  display: flex;
+  flex-direction: column;
+}
+
+/*-------- ABOUT SECTION ---------*/
+.about {
+  padding: 40px 20px;
+}
+
+.about-content h2 {
+  font-size: 2.4rem;
+  color: black;
+  font-weight: 700;
+}
+
+.about-content p {
+  color: hsl(205, 13%, 67%);
+  max-width: 500px;
+  margin: 0 auto 20px;
+}
+
+.about-content a {
+  color: hsl(218, 15%, 31%);
+  font-weight: 400;
+}
+.about-content {
+  text-align: center;
+}
+
+/*-------- BENEFITS SECTION AND PORTFOLIO SECTION ---------*/
+.testimonials {
+  padding: 40px 20px;
+  text-align: center;
+}
+
+.testimonials h2 {
+  font-size: 2.4rem;
+  color: black;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.testimonial-cards {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-top: 20px;
+}
+
+.testimonial {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.testimonial img {
+  width: 80px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.testimonial p {
+  color: hsl(205, 13%, 67%);
+  font-size: 16px;
+  margin: 0 0 16px;
+  max-width: 300px;
+}
+
+.testimonial h3 {
+  font-size: 16px;
+  color: hsl(208, 13%, 36%);
+  font-weight: 400;
+  margin: 0;
+}
+
+.testimonial span {
+  color: hsl(205, 13%, 67%);
+  font-size: 12px;
+}
+/*-------- CALL-TO-ACTION ---------*/
+.call-to-action {
+  background-color: hsl(204, 24%, 96%);
+  padding: 40px 20px;
+  text-align: center;
+}
+
+.call-to-action h2 {
+  font-size: 28px;
+  color: black;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.call-to-action p {
+  color: hsl(205, 13%, 67%);
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+
+.cta-button {
+  color: white;
+  text-transform: uppercase;
+  background-color: black;
+  border-radius: 4px;
+  display: inline-block;
+  text-decoration: none;
+  font-size: 12px;
+  margin: 26px 0;
+}
+
+/*-------- FOOTER ---------*/
+footer {
+  padding: 20px;
+  text-align: center;
+}
+
+.footer-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+.footer-list li {
+  font-size: 12px;
+}
+
+.footer-list a {
+  color: hsl(208, 13%, 36%);
+  text-decoration: none;
+}
+
+.footer-copyright {
+  font-size: 14px;
+  color: hsl(205, 13%, 67%);
+  padding-top: 10px;
+  border-top: 1px solid hsl(207, 22%, 84%);
+}
+
+/*-------- HERO SECTION ---------*/
+
+section.hero {
+  background-image: url("images/nicole-and-dogs.png");
+  background-position: bottom right;
+  background-size: 85%;
+  background-repeat: no-repeat;
+  text-align: center;
+  height: 100vh;
+  padding: 56px 0;
+}
