--- a/.github/style.css
+++ b/.github/style.css
@@ -279,3 +279,125 @@ section.hero {
   height: 100vh;
   padding: 56px 0;
 }
+
+/*-------- LARGE DEVICES (desktops, 1200px and up) ---------*/
+@media only screen and (min-width: 1200px) {
+  h1 {
+    font-size: 6.6rem;
+    font-weight: 400;
+    padding-left: 0;
+    padding-right: 0;
+    width: 50%;
+  }
+
+  .toggle {
+    display: none;
+  }
+
+  header {
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr;
+  }
+
+  header nav ul {
+    display: none;
+    background-color: hsl(0deg 0% 0%);
+    position: relative;
+    text-align: center;
+  }
+
+  header nav ul a {
+    color: white;
+    text-decoration: none;
+  }
+
+  header nav ul {
+    display: flex;
+  }
+
+  .login-button {
+    order: 3;
+  }
+  .login-button-mobile {
+    display: none;
+  }
+
+  .content-width {
+    width: 1130px;
+  }
+
+  .about-content {
+    text-align: left;
+    letter-spacing: 0px;
+    top: 98px;
+    left: 150px;
+    width: 360px;
+    height: 56px;
+  }
+
+  .about-content h2 {
+    font-size: 50px;
+  }
+
+  .testimonials h2 {
+    font-size: 50px;
+    margin-bottom: 70px;
+  }
+
+  .testimonial p {
+    max-width: none;
+    font-size: 16px;
+  }
+
+  .testimonial {
+    margin: 20px 30px;
+  }
+
+  .testimonial-cards {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .testimonial {
+    width: 30%;
+  }
+
+  .testimonials h2 {
+    font-size: 35px;
+    margin-bottom: 50px;
+  }
+
+  footer {
+    padding: 30px 60px;
+  }
+
+  .footer-list {
+    flex-direction: row;
+    justify-content: center;
+    gap: 40px;
+  }
+
+  .about {
+    padding-bottom: 350px;
+  }
+
+  /* LARGE HERO */
+
+  section.hero {
+    background-size: auto 75%;
+    text-align: initial;
+    height: initial;
+  }
+
+  section.hero p {
+    padding-bottom: 30px;
+    padding-left: 0;
+    padding-right: 0;
+    width: 50%;
+  }
+
+  .about {
+    display: flex;
+    justify-content: space-around;
+  }
+}
