--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 body {
   font-size: 1.4rem;
   margin: 0;
-  font-family: 'Ubuntu', serif;
+  font-family: "Ubuntu", serif;
   font-weight: 400;
   color: hsl(205, 13%, 67%);
   line-height: 1.5;
@@ -75,7 +75,7 @@ header {
   background-color: hsl(0deg 0% 0%);
 }
 
-.img-logo{
+.img-logo {
   padding: 0;
 }
 
@@ -90,6 +90,7 @@ header nav ul {
   left: 0;
   width: 100%;
   text-align: center;
+  top: 120px;
 }
 
 nav ul {
@@ -115,7 +116,7 @@ nav ul li a {
 /*-------- HERO SECTION ---------*/
 
 section.hero {
-  background-image: url('images/hero-img.png');
+  background-image: url("images/hero-img.png");
   background-repeat: no-repeat;
   text-align: center;
   padding: 56px 0;
@@ -339,13 +340,13 @@ footer {
 }
 
 .team-info h2 {
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   margin-bottom: 10px;
   color: black;
 }
 
 .team-info p {
-  font-size: 1rem;
+  font-size: 1.4rem;
   line-height: 1.6;
   color: grey;
 }
@@ -357,6 +358,10 @@ footer {
   background-color: #f5f5f5;
   text-align: center;
   color: #333;
+}
+
+#contact-page h1 {
+  margin: 20px auto;
 }
 
 .contact-info {
@@ -383,8 +388,6 @@ footer {
   text-decoration: underline;
 }
 
-
-
 .contact-photo {
   width: 100%;
   max-width: 300px;
@@ -403,27 +406,30 @@ video {
   height: 300px;
   border-radius: 10px;
 }
-.contact-form{
-  background-color: #fff;
-  padding:25px;
-	margin:50px 0;
+.contact-form {
+  background-color: #e8e5e5;
+  padding: 25px;
+  margin: 50px 0;
+  width: 100%;
+  border-radius: 10px;
 }
-fieldset{
+fieldset {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
   border: none;
 }
-input, textarea{
-  width:100%;
-	border:1px solid #CCC;
-	background:#FFF;
-	margin:0 0 5px;
-	padding:10px;
+input,
+textarea {
+  width: 100%;
+  border: 1px solid #ccc;
+  background: #fff;
+  margin: 0 0 5px;
+  padding: 10px;
 }
 
-iframe{
+iframe {
   width: 300px;
 }
 
@@ -465,6 +471,7 @@ iframe{
   header nav ul {
     display: flex;
     justify-content: space-around;
+    top: 0;
   }
 
   .content-width {
@@ -603,8 +610,12 @@ iframe{
   }
 
   .contact-info p {
-    font-size: 1.4rem;
-    padding-bottom: 20px;
+    font-size: 1.9rem;
+  }
+
+  .contact-info a {
+    padding: 0px 48px;
+    margin: 8px;
   }
 
   .contact-photo,
@@ -619,8 +630,9 @@ iframe{
     border-radius: 10px;
   }
 
-  iframe{
+  iframe {
     width: 500px;
+    margin-top: 4rem;
   }
 
   /* LARGE HERO */
@@ -644,9 +656,13 @@ iframe{
     display: flex;
     justify-content: space-around;
   }
-  .contact-container{
+  .contact-container {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+  }
+
+  .contact-form {
+    width: 50%;
   }
 }
